--- a/.bib
+++ b/.bib
@@ -1,5 +1,5 @@
 ##Citations 
-@article{{Pew, 
+@article{Pew, 
 auTHor = "Kim Parker", "Juliana Horowitz", "Molly Rohal",
 Title = {What Unites and Divides Urban, Suburban and Rural Communities}, 
 publisher = "PEW",
