--- a/.bib
+++ b/.bib
@@ -5,3 +5,10 @@ Title = {What Unites and Divides Urban, Suburban and Rural Communities},
 publisher = "PEW",
 YEAR = 2018, 
 } 
+
+@article{Pew,
+auTHor = "Kim Parker", "Juliana Horowitz", "Molly Rohal",
+Title = {What Unites and Divides Urban, Suburban and Rural Communities}, 
+publisher = "PEW",
+YEAR = 2018, 
+} 
