--- a/.bib
+++ b/.bib
@@ -6,9 +6,15 @@ publisher = "PEW",
 YEAR = 2018, 
 } 
 
-@article{Pew,
-auTHor = "Kim Parker", "Juliana Horowitz", "Molly Rohal",
-Title = {What Unites and Divides Urban, Suburban and Rural Communities}, 
-publisher = "PEW",
-YEAR = 2018, 
-} 
+@article{doi:10.1111/j.1748-0361.2006.00022.x,
+author = {Chan, Leighton and Hart, L. Gary and Goodman, David C.},
+title = {Geographic Access to Health Care for Rural Medicare Beneficiaries},
+journal = {The Journal of Rural Health},
+volume = {22},
+number = {2},
+pages = {140-146},
+doi = {10.1111/j.1748-0361.2006.00022.x},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1748-0361.2006.00022.x},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1748-0361.2006.00022.x},
+abstract = {ABSTRACT:  Context: Patients in rural areas may use less medical care than those living in urban areas. This could be due to differences in travel distance and time and a utilization of a different mix of generalists and specialists for their care. Purpose: To compare the travel times, distances, and physician specialty mix of all Medicare patients living in Alaska, Idaho, North Carolina, South Carolina, and Washington. Methods: Retrospective design, using 1998 Medicare billing data. Travel time was determined by computing the road distance between 2 population centroids: the patient's and the provider's zone improvement plan codes. Findings: There were 2,220,841 patients and 39,780 providers in the cohort, including 6,405 (16.1\%) generalists, 24,772 (62.3\%) specialists, and 8,603 (21.6\%) nonphysician providers. There were 20,693,828 patient visits during the study. The median overall 1-way travel distance and time was 7.7 miles (interquartile range 1.9–18.7 miles) and 11.7 minutes (interquartile range 3.0–25.7 minutes). The patients in rural areas needed to travel 2 to 3 times farther to see medical and surgical specialists than those living in urban areas. Rural residents with heart disease, cancer, depression, or needing complex cardiac procedures or cancer treatment traveled the farthest. Increasing rurality was also related to decreased visits to specialists and an increasing reliance on generalists. Conclusions: Residents of rural areas have increased travel distance and time compared to their urban counterparts. This is particularly true for rural residents with specific diagnoses or those undergoing specific procedures. Our results suggest that most rural residents do not rely on urban areas for much of their care.}
+}
