--- a/.bib
+++ b/.bib
@@ -1,20 +1,84 @@
 ##Citations 
-@article{Pew, 
-auTHor = "Kim Parker", "Juliana Horowitz", "Molly Rohal",
-Title = {What Unites and Divides Urban, Suburban and Rural Communities}, 
-publisher = "PEW",
-YEAR = 2018, 
-} 
+References:
 
-@article{doi:10.1111/j.1748-0361.2006.00022.x,
-author = {Chan, Leighton and Hart, L. Gary and Goodman, David C.},
-title = {Geographic Access to Health Care for Rural Medicare Beneficiaries},
-journal = {The Journal of Rural Health},
-volume = {22},
-number = {2},
-pages = {140-146},
-doi = {10.1111/j.1748-0361.2006.00022.x},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1748-0361.2006.00022.x},
-eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1748-0361.2006.00022.x},
-abstract = {ABSTRACT:  Context: Patients in rural areas may use less medical care than those living in urban areas. This could be due to differences in travel distance and time and a utilization of a different mix of generalists and specialists for their care. Purpose: To compare the travel times, distances, and physician specialty mix of all Medicare patients living in Alaska, Idaho, North Carolina, South Carolina, and Washington. Methods: Retrospective design, using 1998 Medicare billing data. Travel time was determined by computing the road distance between 2 population centroids: the patient's and the provider's zone improvement plan codes. Findings: There were 2,220,841 patients and 39,780 providers in the cohort, including 6,405 (16.1\%) generalists, 24,772 (62.3\%) specialists, and 8,603 (21.6\%) nonphysician providers. There were 20,693,828 patient visits during the study. The median overall 1-way travel distance and time was 7.7 miles (interquartile range 1.9–18.7 miles) and 11.7 minutes (interquartile range 3.0–25.7 minutes). The patients in rural areas needed to travel 2 to 3 times farther to see medical and surgical specialists than those living in urban areas. Rural residents with heart disease, cancer, depression, or needing complex cardiac procedures or cancer treatment traveled the farthest. Increasing rurality was also related to decreased visits to specialists and an increasing reliance on generalists. Conclusions: Residents of rural areas have increased travel distance and time compared to their urban counterparts. This is particularly true for rural residents with specific diagnoses or those undergoing specific procedures. Our results suggest that most rural residents do not rely on urban areas for much of their care.}
-}
+Ammar Kalia. 2015. “The daily commute: travel times to cities around the world”. January 2018. 
+The Guardian. December 8, 2018. 
+
+B. Axisa, J. Newbold, & D. Scott. 2012. “Factors influencing commute distance: A case study of 
+Toronto's commuter shed”. September 2012. Journal of Transport Geography. December, 
+9, 2018
+
+Berkowitz, Bonnie, and Emily Chow. 2014. “Mapping the Silver Line.” The Washington Post. 
+WP Company. June 23, 2014. 
+http://www.washingtonpost.com/wp-srv/special/local/silver-line-metro-map/. 
+
+“County Officials Break Ground on 14-Mile Bus Rapid Transit Line.” 2018. Bethesda Magazine.
+ 	October 25, 2018. 
+https://bethesdamagazine.com/bethesda-beat/transit/county-officials-break-ground-on-14-mile-bus-rapid-transit-line/. 
+
+“Dulles Corridor Metrorail.” Dulles Corridor Metrorail Project. Accessed December 11, 2018. 
+http://www.dullesmetro.com/silver-line-stations/. 
+
+Emerson, Sean, and Editorial Board. n.d. “In a Historic Victory, Maryland Passes Dedicated
+ Funding for Metro.” Greater Greater Washington. Greater Greater Washington. Accessed
+ 	December 11, 2018. 
+https://ggwash.org/view/67167/in-a-historic-victory-maryland-passes-dedicated-funding-for-metro. 
+
+Fairfax County Virginia. Accessed December 2, 2018. 
+https://www.fairfaxcounty.gov/maps/#gsc.tab=0. 
+
+ Fan et.al, 2014. “Transit and job accessibility: an empirical study of access to competitive 
+clusters and regional growth strategies for enhancing transit accessibility”. May 2014. 
+Transport Policy. December, 9, 2018. 
+
+Ganning. 2018. “The effects of commuter rail establishment on commuting and deconcentration”  
+February 28, 2018. Regional Studies. December 6, 2018. 
+
+Jiawen Yang. 2007. “Policy Implications of Excess Commuting: Examining the Impacts of 
+Changes in US Metropolitan Spatial Structure” April 2007. Urban Studies 391-405. December 6, 2018.
+
+ João-Pedro Ferreira & Cruz, 2014. “Economic, social, energy and environmental assessment of
+inter-municipality commuting: The case of Portugal”. March 2014. Energy Policy. 
+December 11, 2018. 
+
+ Lee, Choi, & Jung. 2017. “Metapopulation Model Using Commuting Flow For National Spread 
+Of The 2009 H1N1 Inﬂuenza Virus In The Republic of Korea”. October 2017. Journal of 
+Theoretical Biology. December 8, 2018. 
+
+Lee & Wohar. 2016. “Bus commuting, subway commuting, and walking to workplaces in US 
+cities: Socioeconomic factors of transit commuters”. February, 2015. International 
+Journal of Sustainable Transportation. December 5, 2018. 
+
+M. Horner & D. Schleith, 2012. “Analyzing temporal changes in land-use transportation 
+relationships: A LEHD-based approach”. July 2015. The Professional Geographer. 
+December 9, 2018. 
+
+“Purple Line Progress.” Maryland Purple Line. Accessed December 11, 2018. 
+http://www.purplelinemd.com/en/about-the-project/project-overview. 
+
+Rapino & Fields. 2012. “Mega Commuting in the U.S. Time and Distance in Defining Long 
+Commutes using the 2006-2010 American Community Survey”.  Social, Economic, and 
+Housing Statistics Division, United States Census Bureau. December 10, 2018.  
+
+
+Rivers & Plumptre. 2016. “The effectiveness of public transit tax credits on commuting 
+behaviour and the environment.” November 2016. Science Direct. December 5, 2018. 
+
+Robert McCartney & Katherine Shaver. 2018. “How can the D.C. region absorb an Amazon 
+headquarters if it can’t cope now with gridlock and housing costs?” Washington Post. 
+December 10, 2018. 
+
+United States Census. Commuting Flows, Table 2: “Residence County to Workplace County 
+Flows for the United States and Puerto Rico Sorted by Workplace Geography: 
+2006-2010”. November 29, 2018. 
+
+US Census Bureau. 2018. “American Community Survey (ACS).” Census Bureau QuickFacts.
+ United States Census Bureau. June 18, 2018. 
+https://www.census.gov/programs-surveys/acs/methodology.html. 
+
+Verhetsel & Vanelslander, 2009. “What location policy can bring to sustainable commuting: an 
+empirical study in Brussels and Flanders, Belgium”. November, 2010. Journal of 
+Transport Geography. December 7, 2018. 
+
+WMATA. 2015. “Bulletin.” Silver Line Metro. July 27, 2015. 
+	http://silverlinemetro.com/metro-celebrates-first-year-of-silver-line-service/.
